# cam_ui

./: CMakeLists.txt  README.md  camui.eez-project-ui-state  partitions_16MB.csv  小相机第一版.epro
3d文件/: 小相机v1.0外壳.3mf  带螺丝的照相机外壳.f3d
main/: CMakeLists.txt  audio_record.c  audio_record.h  bat.c  bat.h  cam.c  cam.h  camera_pinout.h  idf_component.yml  key.c  key.h  lcd.c  lcd.h  main.c  my_fs.c  my_fs.h  myenc.c  myenc.h  pin.h  poker.c  poker.h  ws2812.c  ws2812.h
main/ui/: actions.c  actions.h  fonts.h  screens.c  screens.h  ui.c  ui.h  ui_font_cn_font_16.c  vars.c  vars.h
